@@ -2,6 +2,7 @@ package App::Doh::CLI;
 
 use namespace::autoclean;
 
+use Moo;
 use App::Doh;
 use App::Doh::Functions    qw( iterator );
 use App::Doh::Model::Documentation;
@@ -9,7 +10,6 @@ use App::Doh::Model::Posts;
 use Class::Usul::Constants qw( FALSE NUL OK TRUE );
 use Class::Usul::Functions qw( app_prefix io );
 use Class::Usul::Types     qw( HashRef LoadableClass Object );
-use Moo;
 
 extends q(Class::Usul::Programs);
 
