@@ -2,7 +2,8 @@ package App::Doh::Model::Documentation;
 
 use feature 'state';
 
-use App::Doh::Constants;
+use Moo;
+use App::Doh::Attributes;
 use App::Doh::Functions    qw( build_tree extract_lang iterator localise_tree
                                make_id_from make_name_from mtime );
 use Class::Usul::Constants qw( EXCEPTION_CLASS TRUE );
@@ -14,7 +15,6 @@ use HTTP::Status           qw( HTTP_EXPECTATION_FAILED HTTP_NOT_FOUND
                                HTTP_PRECONDITION_FAILED
                                HTTP_REQUEST_ENTITY_TOO_LARGE );
 use Unexpected::Functions  qw( Unspecified );
-use Moo;
 
 extends q(App::Doh::Model);
 with    q(App::Doh::Role::Authorization);
