@@ -2,11 +2,11 @@ package App::Doh::Model::Help;
 
 use namespace::autoclean;
 
+use Moo;
 use Class::Usul::Constants qw( NUL );
 use Class::Usul::Functions qw( find_source );
 use Class::Usul::Types     qw( ArrayRef );
 use File::DataClass::IO;
-use Moo;
 
 extends q(App::Doh::Model);
 with    q(App::Doh::Role::CommonLinks);
