@@ -1,5 +1,7 @@
 Revision history for App-Doh
 
+          - Added ::Auth::Htpasswd to bypass auth for static page generation
+          - Renamed attribute handler class to ::Attributes
           - Moved attribute handlers to own class
           - Deleted ::Auth::Htpasswd
           - Addd Authorization role using subroutine attributes
